--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,20 @@
     <commons.cli.version>1.5.0</commons.cli.version>
   </properties>
   
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
 		<dependency>
 	    <groupId>org.apache.logging.log4j</groupId>
